# nlcli-wizard

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  imatrix_data.txt  pyproject.toml  requirements.txt
.github/: CODEOWNERS
assets/data/base/dockerNLcommands/: README.md
assets/data/mart/: gemma.jsonl
assets/data/staging/dockerNLcommands/: stg_06102023.jsonl
assets/data/staging/virtual_environments/: stg_venvy_training.jsonl
data/: DOCKER_DATASET_README.md  docker_training.jsonl
data_pipeline/datasets/dockerNLcommands/: scrape.py
data_pipeline/scrapers/: __init__.py
docs/: IMPLEMENTATION_PLAN.md  TECHNICAL_ANALYSIS.md  TRAINING_GUIDE.md  TRAINING_GUIDE_COLAB.md
models/: venvy_gemma3_q4km.gguf
nlcli_wizard/: __init__.py  agent.py  cli.py  dataset.py  dataset_docker.py  model.py
nlcli_wizard/data_pipeline/datasets/dockerNLcommands/: scrape.py
nlcli_wizard/data_pipeline/scrapers/: hugging_face.py
nlcli_wizard/data_pipeline/transform/: mart_gemma.py
nlcli_wizard/data_pipeline/transform/dockerNLcommands/: staging.py
nlcli_wizard/data_pipeline/transform/venvy_training/: staging.py
notes/: TRAINING_CHECKLIST.md  TRAINING_SUMMARY.md
outputs/: README.md
outputs/checkpoint-100/: README.md  scheduler.pt  trainer_state.json
outputs/checkpoint-200/: adapter_config.json  scheduler.pt  trainer_state.json
outputs/checkpoint-255/: scheduler.pt  trainer_state.json
test/: evaluate_accuracy.py  test_model.py
training/: IMATRIX_CMAKE_FIX.md  IMATRIX_FIX.md  QUICK_FIX_test_function.py  nlcli_wizard_training_[PUBLIC].ipynb  train_gemma3_colab.ipynb
unsloth_compiled_cache/: AqlmLoraLinear_peft_forward.py  AwqLoraLinear_peft_forward.py  BatchNorm2d.py  Conv2d.py  ConvTranspose1d.py  ConvTranspose2d.py  ConvTranspose3d.py  GPTQLoraLinear_peft_forward.py  GroupNorm.py  LayerNorm.py  Linear4bit_peft_forward.py  Linear8bitLt_peft_forward.py  Linear_peft_forward.py  LoraParallelLinear_peft_forward.py  RMSNorm.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py  unsloth_compiled_module_gemma3.py  unsloth_compiled_module_siglip.py
venvy_gemma3_merged/: config.json  tokenizer_config.json
